shellfirm/tests/snapshots/checks__heroku-remove_user_access.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-remove_user_access.yaml",
        test: "heroku access:remove",
        check_detection_ids: [
            "heroku:remove_user_access",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-remove_user_access.yaml",
        test: "heroku   access:remove",
        check_detection_ids: [
            "heroku:remove_user_access",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-remove_user_access.yaml",
        test: "herokuu access:remove",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
