shellfirm/tests/snapshots/checks__heroku-rename_app_name.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-rename_app_name.yaml",
        test: "heroku apps:rename",
        check_detection_ids: [
            "heroku:rename_app_name",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-rename_app_name.yaml",
        test: "heroku   apps:rename",
        check_detection_ids: [
            "heroku:rename_app_name",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-rename_app_name.yaml",
        test: "herokuu apps:rename",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
