shellfirm/tests/snapshots/checks__heroku-reset_repo.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-reset_repo.yaml",
        test: "heroku repo:reset",
        check_detection_ids: [
            "heroku:reset_repo",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-reset_repo.yaml",
        test: "heroku   repo:reset",
        check_detection_ids: [
            "heroku:reset_repo",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-reset_repo.yaml",
        test: "herokuu repo:reset",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
