shellfirm/tests/snapshots/checks__heroku-rotate_oauth_client.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-rotate_oauth_client.yaml",
        test: "heroku clients:rotate",
        check_detection_ids: [
            "heroku:rotate_oauth_client",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-rotate_oauth_client.yaml",
        test: "heroku   clients:rotate",
        check_detection_ids: [
            "heroku:rotate_oauth_client",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-rotate_oauth_client.yaml",
        test: "herokuu clients:rotate",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
