shellfirm/tests/snapshots/checks__heroku-unset_environment_variable.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "heroku-unset_environment_variable.yaml",
        test: "heroku config:unset",
        check_detection_ids: [
            "heroku:unset_environment_variable",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-unset_environment_variable.yaml",
        test: "heroku   config:unset",
        check_detection_ids: [
            "heroku:unset_environment_variable",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "heroku-unset_environment_variable.yaml",
        test: "herokuu config:unset",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
